# learn-claude-code

./: .editorconfig  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  example.txt  greet.py  hello.py  pyproject.toml  setup.cfg  test.txt
.team/: config.json
.team/inbox/: charlie.jsonl
.worktrees/: events.jsonl  index.json
agents/: __init__.py  s01_agent_loop.py  s02_tool_use.py  s03_todo_write.py  s04_subagent.py  s05_skill_loading.py  s06_context_compact.py  s07_task_system.py  s08_background_tasks.py  s09_agent_teams.py  s11_autonomous_agents.py  s12_worktree_task_isolation.py
mypackage/: __init__.py  config.py  logger.py  response_parser.py  tools.py  utils.py  validation.py
mypackage/tests/: __init__.py  test_config.py  test_tools.py  test_utils.py
test_output/: file1.txt  file2.txt
web/: jest.config.json  jest.setup.ts  package.json
web/docs/: API.md  AUTH_QUICKSTART.md  AUTH_README.md  AUTH_TASK_SUMMARY.md  AUTH_THREAT_MODEL.md  openapi.yaml  postman_collection.json
web/prisma/: README.md  schema.prisma  seed.ts
web/prisma/migrations/: migration_lock.toml
web/prisma/migrations/20240101000000_init/: down.sql  migration.sql
web/src/__tests__/auth/: api.test.ts  components.test.tsx  security.test.ts
web/src/app/[locale]/(auth)/login/: page.tsx
web/src/app/[locale]/(auth)/register/: page.tsx
web/src/app/api/auth/login/: route.ts
web/src/app/api/auth/logout/: route.ts
web/src/app/api/auth/register/: route.ts
web/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
web/src/lib/: db.ts
web/src/lib/auth/: password.ts  rate-limiter.ts  session.ts  validation.ts
