[metadata]
name = learn-claude-code
version = attr: learn_claude_code.__version__
description = Learn to build agent harnesses - the infrastructure that enables AI agents to operate effectively
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shareAI-lab/learn-claude-code
author = shareAI-lab
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    anthropic>=0.18.0
    python-dotenv>=1.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.12.0
    mypy>=1.0.0
    flake8>=6.0.0

[options.package_data]
* = *.pyi, py.typed

[flake8]
max-line-length = 100
extend-ignore = E203, E266, E501, W503
exclude = 
    .git,
    __pycache__,
    venv,
    .venv,
    build,
    dist,
    *.egg-info
max-complexity = 10
